[package]
name = "repairer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common-telemetry = { workspace = true }
datanode-options = { workspace = true }
object-store = { workspace = true }
secrecy.workspace = true
snafu.workspace = true
storage = { workspace = true }
