[package]
name = "storage-bencher"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humantime-serde = "1"
serde = "1"
storage = { path = "../storage" }
toml = "0.5"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
