[package]
name = "storage-bencher"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-base = { path = "../common/base" }
common-runtime = { path = "../common/runtime" }
common-telemetry = { path = "../common/telemetry" }
datatypes = { path = "../datatypes" }
flume = "0.10"
futures-util.workspace = true
humantime-serde = "1"
log-store = { path = "../log-store" }
object-store = { path = "../object-store" }
once_cell = "1"
parquet = { workspace = true, features = ["async"] }
serde = "1"
storage = { path = "../storage" }
store-api = { path = "../store-api" }
tokio.workspace = true
toml = "0.5"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
