[package]
name = "common-mem-prof"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
jemalloc = ["dep:tikv-jemalloc-ctl", "dep:tikv-jemalloc-sys"]

[lints]
workspace = true

[dependencies]
common-error.workspace = true
common-macro.workspace = true
snafu.workspace = true
tempfile = "3.4"
tikv-jemalloc-ctl = { version = "0.5", features = ["use_std"], optional = true }
tikv-jemalloc-sys = { version = "0.5", features = ["stats", "profiling", "unprefixed_malloc_on_supported_platforms"], optional = true }
tokio.workspace = true

# [target.'cfg(all(not(windows), jemalloc))'.dependencies]
# tikv-jemalloc-ctl = { version = "0.5", features = ["use_std"] }
#
# [target.'cfg(all(not(windows), jemalloc))'.dependencies.tikv-jemalloc-sys]
# features = ["stats", "profiling", "unprefixed_malloc_on_supported_platforms"]
# version = "0.5"
